--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <img src="logo1.jpeg" alt="DevSolutions Logo">
         <nav>
-            <a href="#">Solicitud de boleto</a>
-            <a href="#">Compra de boleto</a>
-            <a href="#">Creacion de Fan ID</a>
+            <a href="solicituddeBoleto.html">Solicitud de boleto</a>
+            <a href="boleto.html">Compra de boleto</a>
+            <a href="CreacionFanID.html">Creacion de Fan ID</a>
             <a href="addevent.html">Agregar Evento</a>
         </nav>
     </div>
