--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo1.jpeg" alt="DevSolutions Logo">
+        <img src="logo.png" alt="DevSolutions Logo">
         <nav>
+            
+            <a href="index.html">Eventos</a>
+            <a href="addevent.html">Agregar Evento</a>
             <a href="solicituddeBoleto.html">Solicitud de boleto</a>
+            <a href="asignaciondeboleto.html">Asignacion de Boleto</a>
             <a href="boleto.html">Compra de boleto</a>
             <a href="CreacionFanID.html">Creacion de Fan ID</a>
-            <a href="addevent.html">Agregar Evento</a>
+            <a href="Entrada.html">Entrada al evento</a>
+            <a href="validacionboleto.html">Validacion de Boleto</a>
+             <a href="validacionfanid.html">Validacion de FanID</a>
+            
         </nav>
     </div>
     <div class="container">
