--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.png" alt="DevSolutions Logo">
+         <a href="index.html">
+            <img src="logo.png" alt="Logo"> DevSolutions
+        </a>
         <nav>
             
             <a href="index.html">Eventos</a>
