--- a/addevent.html
+++ b/addevent.html
@@ -10,7 +10,9 @@
 
 <body>
     <div class="header">
-        <img src="logo1.jpeg" alt="DevSolutions Logo">
+      <a href="index.html">
+            <img src="logo.png" alt="Logo"> DevSolutions
+        </a>
         <nav>
             <a href="index.html">Inicio</a>
         </nav>
