--- a/asignaciondeboleto.html
+++ b/asignaciondeboleto.html
@@ -14,42 +14,24 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">
+    <div class="header">
+         <a href="index.html">
             <img src="logo.png" alt="Logo"> DevSolutions
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Eventos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Solicitud de Boleto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Asignacion de Boleto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Compra de Boleto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="CreacionFanID.html">Creación FanID</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Entrada al evento</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Validacion de Boleto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Validacion de FanID</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        <nav>
+            
+            <a href="index.html">Eventos</a>
+            <a href="addevent.html">Agregar Evento</a>
+            <a href="solicituddeBoleto.html">Solicitud de boleto</a>
+            <a href="asignaciondeboleto.html">Asignacion de Boleto</a>
+            <a href="boleto.html">Compra de boleto</a>
+            <a href="CreacionFanID.html">Creacion de Fan ID</a>
+            <a href="Entrada.html">Entrada al evento</a>
+            <a href="validacionboleto.html">Validacion de Boleto</a>
+             <a href="validacionfanid.html">Validacion de FanID</a>
+            
+        </nav>
+    </div>
     <div class="container mt-5">
         <h2 class="mt-5">Boletos Disponibles</h2>
         <table class="table table-bordered">
