--- a/boleto.html
+++ b/boleto.html
@@ -125,7 +125,7 @@
             <p class="card-text">Asiento: A12</p>
             <!-- Agrega más información del boleto según tus necesidades -->
             <div class="d-grid gap-2 mt-4">
-              <a href="validar_fanid.html" class="btn btn-validate">Validar FanID</a>
+              <a href="validacionfanid.html" class="btn btn-validate">Validar FanID</a>
             </div>
           </div>
         </div>
