--- a/asignaciondeboleto.html
+++ b/asignaciondeboleto.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asignación de Boletos</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+
     <style>
         .navbar-brand img {
             max-width: 30px;
