--- a/compra.html
+++ b/compra.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>Revisión de Boletos</title>
+    <title>Revisión de Boletos</title><link rel="stylesheet" href="styles.css">
+
     <style>
         .concert-poster {
             max-width: 100%;
