--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="boleto.html">Compra de boleto</a>
             <a href="CreacionFanID.html">Creacion de Fan ID</a>
             <a href="addevent.html">Agregar Evento</a>
+            <a href="Entrada.html">Entrada al evento</a>
         </nav>
     </div>
     <div class="container">
