--- a/asignaciondeboleto.html
+++ b/asignaciondeboleto.html
@@ -26,7 +26,7 @@
             <a href="addevent.html">Agregar Evento</a>
             <a href="solicituddeBoleto.html">Solicitud de boleto</a>
             <a href="asignaciondeboleto.html">Asignacion de Boleto</a>
-            <a href="boleto.html">Compra de boleto</a>
+            <a href="compra.html">Compra de boleto</a>
             <a href="CreacionFanID.html">Creacion de Fan ID</a>
             <a href="Entrada.html">Entrada al evento</a>
             <a href="validacionboleto.html">Validacion de Boleto</a>
