--- a/compra.html
+++ b/compra.html
@@ -15,6 +15,7 @@
             background-color: #f8f9fa;
             padding: 20px;
             border-radius: 5px;
+            color: black;
         }
         .countdown {
             color: green;
