--- a/compra.html
+++ b/compra.html
@@ -107,8 +107,9 @@
                         <strong>Precio:</strong>
                         <p>6 x $265.00 cada uno</p>
                     </div>
-                    
-                    <button class="btn btn-success btn-buy w-100">Comprar boletos</button>
+                    <a href= "boleto.html?boleto=HJK-KLP-JKL">
+                    <button class="btn btn-success btn-buy w-100" >Comprar boletos</button>
+                    </a>
                 </div>
             </div>
         </div>
