final final del final

--- a/asignaciondeboleto.html
+++ b/asignaciondeboleto.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="header">
-         <a href="index.html">
+         <a href="index.html"  class="letrawhite">
             <img src="logo.png" alt="Logo"> DevSolutions
         </a>
         <nav>
