--- a/Entrada.html
+++ b/Entrada.html
@@ -67,7 +67,7 @@
 <body>
 
     <div class="header">
-        <a href="index.html">
+        <a href="index.html"  class="letrawhite">
            <img src="logo.png" alt="Logo"> DevSolutions
        </a>
        <nav>
