--- a/compra.html
+++ b/compra.html
@@ -65,7 +65,7 @@
 <body>
 
     <div class="header">
-         <a href="index.html">
+         <a href="index.html"  class="letrawhite">
             <img src="logo.png" alt="Logo"> DevSolutions
         </a>
         <nav>
