--- a/event.html
+++ b/event.html
@@ -8,11 +8,23 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo1.jpeg" alt="DevSolutions Logo">
-        <nav>
-            <a href="index.html">Inicio</a>
-        </nav>
-    </div>
+        <a href="index.html" class="letrawhite">
+           <img src="logo.png" alt="Logo"> DevSolutions
+       </a>
+       <nav>
+           
+           <a href="index.html">Eventos</a>
+           <a href="solicituddeBoleto.html">Solicitud de boleto</a>
+           <a href="asignaciondeboleto.html">Asignacion de Boleto</a>
+           <a href="compra.html">Compra de boleto</a>
+           <a href="CreacionFanID.html">Creacion de Fan ID</a>
+           <a href="Entrada.html">Entrada al evento</a>
+           <a href="validacionboleto.html">Validacion de Boleto</a>
+            <a href="validacionfanid.html">Validacion de FanID</a>
+           
+
+       </nav>
+   </div>
     <div class="container">
         <div class="event-details">
             <h2 id="eventTitle">Detalles del Evento</h2>
@@ -40,5 +52,7 @@
     <script>
         loadEventDetails();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
