--- a/ActivarEvento.html
+++ b/ActivarEvento.html
@@ -17,14 +17,13 @@
             margin-top: -44px;
         }
         .qr-code {
-            filter: blur(10px);
             transition: filter 0.5s ease;
+        }
+        .blur{
+            filter: blur(10px);
         }
         .qr-code.clear {
             filter: blur(0);
-        }
-        .btn {
-            margin-top: 20px;
         }
         .btn.blur {
             filter: blur(10px);
@@ -33,77 +32,52 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo1.jpeg" alt="DevSolutions Logo">
-        <nav>
-            <a href="index.html">Inicio</a>
-        </nav>
-    </div>
+        <a href="index.html" class="letrawhite">
+           <img src="logo.png" alt="Logo"> DevSolutions
+       </a>
+       <nav>
+           
+           <a href="index.html">Eventos</a>
+           <a href="solicituddeBoleto.html">Solicitud de boleto</a>
+           <a href="asignaciondeboleto.html">Asignacion de Boleto</a>
+           <a href="compra.html">Compra de boleto</a>
+           <a href="CreacionFanID.html">Creacion de Fan ID</a>
+           <a href="Entrada.html">Entrada al evento</a>
+           <a href="validacionboleto.html">Validacion de Boleto</a>
+            <a href="validacionfanid.html">Validacion de FanID</a>
+           
+
+       </nav>
+   </div>
     <div class="container">
         <div class="container qr-container">
             <h4 id="activationStatus">El evento no está activado</h4>
-            <h4>Entrada disponible por: <span id="countdown">00:10</span></h4>
-            <img src="evento1.png" alt="Código QR" class="qr-code" id="qrCode">
+            <img src="evento1.png" alt="Código QR" class="qr-code blur" id="qrCode">
             <button class="btn btn-primary w-100" id="startButton">Activar el evento</button>
         </div>
     </div>
 
     <script>
-        let countdownTime = 10; // 10 segundos
-        let countdownInterval;
         let isEventActivated = false;
 
-        const countdownElement = document.getElementById('countdown');
         const qrCodeElement = document.getElementById('qrCode');
         const startButton = document.getElementById('startButton');
         const activationStatus = document.getElementById('activationStatus');
 
-        function startCountdown() {
-            if (isEventActivated) return; // Si el evento ya está activado, no hacer nada
-
-            let time = countdownTime;
-
-            // Cambiar el botón a borroso
-            startButton.classList.add('blur');
-
-            countdownInterval = setInterval(() => {
-                let minutes = Math.floor(time / 60);
-                let seconds = time % 60;
-
-                // Formatear el tiempo como MM:SS
-                minutes = minutes < 10 ? '0' + minutes : minutes;
-                seconds = seconds < 10 ? '0' + seconds : seconds;
-
-                countdownElement.innerHTML = `${minutes}:${seconds}`;
-
-                // Disminuir el tiempo del contador
-                time--;
-
-                // Cuando el contador llegue a 0, limpiar el intervalo y aplicar el desenfoque al código QR
-                if (time < 0) {
-                    clearInterval(countdownInterval);
-                    qrCodeElement.classList.remove('clear');
-                    startButton.classList.remove('blur');
-                    qrCodeElement.classList.add('blur');
-                    activationStatus.innerHTML = 'El evento no está activado';
-                    isEventActivated = false;
-                }
-            }, 1000);
-
-            // Hacer visible el código QR y actualizar el estado del evento
-            qrCodeElement.classList.add('clear');
-            isEventActivated = true;
-            activationStatus.innerHTML = 'El evento está activado';
+        function toggleEventActivation() {
+            if (isEventActivated) {
+                qrCodeElement.classList.add('blur');
+                startButton.innerText = 'Activar evento';
+                activationStatus.innerText = 'El evento no está activado';
+            } else {
+                qrCodeElement.classList.remove('blur');
+                startButton.innerText = 'Desactivar evento';
+                activationStatus.innerText = 'El evento está activado';
+            }
+            isEventActivated = !isEventActivated;
         }
 
-        startButton.addEventListener('click', startCountdown);
-    </script>
-    <script src="events.js"></script>
-    <script>
-        loadEventDetails();
-
-        function activateEvent() {
-            alert('Evento Activado');
-        }
+        startButton.addEventListener('click', toggleEventActivation);
     </script>
 </body>
 </html>
